[package]
name = "axum_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
axum = { version = "0.7.4" }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
tower-http = { version = "0.5.2", features = ["trace","cors"] }
